--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ set( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/exe" )
 set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/exe" )
 
 FILE( GLOB_RECURSE PROJ_SOURCES src/*.cpp )
-FILE( GLOB_RECURSE PROJ_HEADERS src/*.h )
+FILE( GLOB_RECURSE PROJ_HEADERS src/*.h src/*.hpp )
 set(files ${PROJ_SOURCES} ${PROJ_HEADERS})
 
 
